--- a/css/micons/micons.css
+++ b/css/micons/micons.css
@@ -147,6 +147,9 @@
 .icon-circle-up:before {
     content: "\e928";
 }
+.icon-clipboard:before {
+  content: "\e9b8";
+}
 .icon-clock:before {
     content: "\e929";
 }
@@ -510,6 +513,9 @@
 .icon-quote:before {
     content: "\e9a1";
 }
+.icon-radio-checked:before {
+  content: "\ea54";
+}
 .icon-record:before {
     content: "\e9a2";
 }
@@ -717,4 +723,3 @@
 .icon-zoom-out:before {
     content: "\e9e6";
 }
-
