--- a/css/main.css
+++ b/css/main.css
@@ -1096,7 +1096,7 @@ header .row {
 header .top-bar {
 	display: block;
 	background: #151515;
-	max-width: 100%;
+	width: 100%;
 	min-height: 66px;
 	position: absolute;
 	left: 0px;
