--- a/css/main.css
+++ b/css/main.css
@@ -1826,6 +1826,7 @@ header .logo a {
 	display: table;
 	width: 100%;
 	height: 100%;
+	box-shadow: 0 20px 40px rgba(0,0,0,0.4);
 }
 #portfolio .folio-item-cell {
 	display: table-cell;
