--- a/css/main.css
+++ b/css/main.css
@@ -1826,7 +1826,7 @@ header .logo a {
 	display: table;
 	width: 100%;
 	height: 100%;
-	box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 #portfolio .folio-item-cell {
 	display: table-cell;
