--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,54 +1,60 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
-.snip1143 {
-  font-family: 'Raleway', Arial, sans-serif;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 500;
-}
-.snip1143 * {
-  box-sizing: border-box;
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
-}
-.snip1143 li {
-  display: inline-block;
-  list-style: outside none none;
-  margin: 0 1.5em;
-  overflow: hidden;
-}
-.snip1143 a {
-  padding: 0.3em 0;
-  color: rgba(255, 255, 255, 0.5);
-  position: relative;
-  display: inline-block;
-  letter-spacing: 1px;
+body {
   margin: 0;
+  padding: 0;
+  background: #ccc;
+}
+
+.nav ul {
+  list-style: none;
+  background-color: #444;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+.nav li {
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.2em;
+  line-height: 40px;
+  height: 40px;
+  border-bottom: 1px solid #888;
+}
+
+.nav a {
   text-decoration: none;
-}
-.snip1143 a:before,
-.snip1143 a:after {
-  position: absolute;
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
-}
-.snip1143 a:before {
-  top: 100%;
+  color: #fff;
   display: block;
-  height: 3px;
-  width: 100%;
-  content: "";
-  background-color: #c0392b;
+  transition: .3s background-color;
 }
-.snip1143 a:after {
-  padding: 0.3em 0;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  content: attr(data-hover);
-  color: white;
-  white-space: nowrap;
+
+.nav a:hover {
+  background-color: #005f5f;
 }
-.snip1143 li:hover a,
-.snip1143 .current a {
-  transform: translateY(-100%);
+
+.nav a.active {
+  background-color: #fff;
+  color: #444;
+  cursor: default;
+}
+
+@media screen and (min-width: 600px) {
+  .nav li {
+    width: 120px;
+    border-bottom: none;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.4em;
+  }
+
+  .nav li {
+    float: left;
+  }
+  .nav ul {
+    overflow: auto;
+    width: 600px;
+    margin: 0 auto;
+  }
+  .nav {
+    background-color: #444;
+  }
+
 }
