--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,60 +1,294 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito|Lacquer');
+
+$navbarHeight: 65px;
+$sidebarWidth: 45vw;
+$primary: #080808;
+$secondary: #ffc600;
+
+$bgImage: 'https://images.unsplash.com/photo-1563733758230-a5d441824696?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80';
+
+
 body {
-  margin: 0;
-  padding: 0;
-  background: #ccc;
+	margin: 0;
 }
 
-.nav ul {
-  list-style: none;
-  background-color: #444;
-  text-align: center;
-  padding: 0;
-  margin: 0;
-}
-.nav li {
-  font-family: 'Oswald', sans-serif;
-  font-size: 1.2em;
-  line-height: 40px;
-  height: 40px;
-  border-bottom: 1px solid #888;
+body,button,input {
+	font-family: Nunito;
 }
 
-.nav a {
-  text-decoration: none;
-  color: #fff;
-  display: block;
-  transition: .3s background-color;
+* {
+	box-sizing: border-box;
+	transition: 0.4s ease all;
 }
 
-.nav a:hover {
-  background-color: #005f5f;
+h1,h2,h3,h4,h5,h6 {
+	margin: 0;
 }
 
-.nav a.active {
-  background-color: #fff;
-  color: #444;
-  cursor: default;
+
+ul {
+	padding: 0;
+	margin: 0;
 }
 
-@media screen and (min-width: 600px) {
-  .nav li {
-    width: 120px;
-    border-bottom: none;
-    height: 50px;
-    line-height: 50px;
-    font-size: 1.4em;
-  }
 
-  .nav li {
-    float: left;
-  }
-  .nav ul {
-    overflow: auto;
-    width: 600px;
-    margin: 0 auto;
-  }
-  .nav {
-    background-color: #444;
-  }
+
+.navbar {
+	background: $primary;
+	color: #fff;
+	padding: 15px;
+	width: 100%;
+	height: $navbarHeight;
+
+	display: flex;
+	align-items: center;
+}
+
+.navbar .logo {
+	cursor: pointer;
+	font-family: Lacquer;
+}
+
+
+.navbar ul.links {
+
+	margin-left: auto;
+	margin-right: 50px;
+	list-style: none;
+
+	display: flex;
+	align-items: center;
+
+	transition: 0.4s ease all, 0s ease background;
+
+	li {
+		text-transform: uppercase;
+		padding: 0 15px;
+		height: $navbarHeight;
+
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		transition: 0.4s ease all, 0s ease margin;
+
+		a {
+			text-decoration: none;
+			color: #fff;
+		}
+
+		&:hover {
+			background: $secondary;
+			cursor: pointer;
+
+			a {
+				color: #080808;
+			}
+
+		}
+
+
+	}
+
+}
+
+
+button {
+	background: $secondary;
+	outline: none;
+	font-weight: bold;
+	padding: 10px 18px;
+	border-radius: 25px;
+	border: 1px solid darken($secondary,5%);
+	letter-spacing: 1px;
+
+
+	&:hover {
+		cursor: pointer;
+		transform: scale(1.1);
+		color: white;
+		background: lighten(#080808,10%);
+		border-color: darken($primary,5%);
+	}
+
+}
+
+
+
+.content {
+	background: url($bgImage) no-repeat;
+	background-size: cover;
+	height: calc(100vh - #{$navbarHeight});
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	color: #fff;
+
+	h2 {
+		color: $secondary;
+	}
+
+}
+
+
+.navbar.sticky {
+	position: fixed;
+	z-index: 40;
+
+
+	~ main {
+		position: relative;
+		z-index: 20;
+		top: $navbarHeight;
+	}
+
+}
+
+section {
+	background: #000;
+	color: $secondary;
+	padding: 20px;
+	font-family: Lacquer;
+	font-weight: bold;
+	letter-spacing: 0.5px;
+}
+
+
+// RESPONSIVE
+
+@media screen and (max-width: 750px){
+
+
+	.navbar .right {
+		height: 0;
+		overflow: hidden;
+	}
+
+
+	.toggle {
+		position: absolute;
+		top: $navbarHeight / 2;
+		right: 20px;
+		z-index: 99;
+
+		transform: translateY(-50%);
+
+		cursor: pointer;
+		width: 40px;
+		height: 40px;
+
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+
+		> * {
+			width: 80%;
+			height: 2px;
+			background: #fff;
+			margin: 3px 0;
+		}
+
+	}
+
+	.navbar.collapsed .toggle {
+
+		.line1 {
+			transform: rotate(-45deg) translate(-4px,5px);
+		}
+
+		.line2 {
+			opacity: 0;
+		}
+
+		.line3 {
+			transform: rotate(45deg) translate(-5px,-6px);
+		}
+
+	}
+
+
+	.navbar.collapsed .logo {
+		position: absolute;
+		z-index: 44;
+	}
+
+	.navbar .links {
+		position: fixed;
+		background: #080808;
+		z-index: 40;
+		top: 0;
+		left: -100%;
+		flex-direction: column;
+		width: $sidebarWidth;
+		height: 100vh;
+
+		li:first-child {
+			margin-top: 80px;
+		}
+
+	}
+
+	.navbar.collapsed .links {
+		left: 0;
+
+		a {
+			color: #fff;
+		}
+
+		li {
+			width: 100%;
+
+			&:hover a {
+				color: #080808;
+			}
+
+		}
+
+
+	}
+
+	.navbar.collapsed .right {
+		position: fixed;
+		width: $sidebarWidth;
+		text-align: center;
+		height: auto;
+		bottom: 40px;
+		left: $sidebarWidth/2;
+		transform: translateX(-50%);
+		z-index: 45;
+	}
+
+
+
+	.navbar.collapsed {
+
+		~ main {
+			filter: blur(1px);
+			opacity: 0.8;
+		}
+
+	}
+
+
+	.navbar.sticky {
+		position: fixed;
+		z-index: 40;
+	}
+
+
+
+
+
+
+
+
+
+
+
 
 }
