--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
 h2 {
   vertical-align: center;
   text-align: center;
@@ -10,7 +9,7 @@ html, body {
 }
 
 * {
-  font-family: "Raleway";
+  font-family: "poppins-semibold", sans-serif;
   box-sizing: border-box;
 }
 
