--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -18,7 +18,7 @@ body {
   font-size: 3.75rem;
 }
 .display-4 {
-  font-family: 'Lora', serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.1rem;
   line-height: 1.5;
 }
@@ -586,7 +586,7 @@ a:hover {
   display: none;
 }
 .form-control {
-  font-family: 'Lora', serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.1rem;
   line-height: 1.5;
   font-weight: 400;
@@ -600,7 +600,7 @@ a:hover {
   border-color: #75addb !important;
 }
 .form-control:-webkit-input-placeholder {
-  font-family: 'Lora', serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.1rem;
   line-height: 1.5;
   font-weight: 400;
@@ -1677,6 +1677,65 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-sYzbPCvQ7r {
+  padding-top: 6rem;
+  padding-bottom: 2rem;
+  background-image: url("../../../assets/images/intro-bg-2000x1125.jpg");
+}
+.cid-sYzbPCvQ7r .mbr-text,
+.cid-sYzbPCvQ7r .mbr-section-btn {
+  color: #232323;
+}
+.cid-sYzbPCvQ7r .card-title,
+.cid-sYzbPCvQ7r .card-box {
+  color: #ffffff;
+}
+.cid-sYzbPCvQ7r .mbr-text,
+.cid-sYzbPCvQ7r .link-wrap {
+  color: #ffffff;
+}
+.cid-sYzcirxQYM {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sYzcirxQYM .card-wrapper {
+  border-radius: 4px;
+  background: #fafafa;
+}
+@media (min-width: 992px) {
+  .cid-sYzcirxQYM .card-wrapper {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sYzcirxQYM .card-wrapper {
+    padding: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+.cid-sYzcirxQYM .row {
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 767px) {
+  .cid-sYzcirxQYM .row .row {
+    flex-direction: column-reverse;
+  }
+  .cid-sYzcirxQYM .row .row .img-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-sYzcirxQYM .img-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sYzcirxQYM .card-subtitle {
+  color: #0095ff;
+}
+.cid-sYzcirxQYM .mbr-text {
+  color: #555555;
 }
 .cid-sYsmn2ZqhN {
   padding-top: 2rem;
