--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4067,7 +4067,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #75addb;
 }
 .cid-sYseAX4x5N button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
