--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -971,7 +971,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #75addb;
 }
 .cid-sYseAX4x5N button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1163,6 +1163,9 @@ a {
 }
 .cid-sYxCedtxpF .card-title,
 .cid-sYxCedtxpF .iconfont-wrapper {
+  color: #ffffff;
+}
+.cid-sYxCedtxpF .mbr-section-subtitle {
   color: #ffffff;
 }
 .cid-sYsmb5kLZU {
@@ -1607,7 +1610,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #75addb;
 }
 .cid-sYseAX4x5N button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2095,7 +2098,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #75addb;
 }
 .cid-sYseAX4x5N button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2596,7 +2599,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #75addb;
 }
 .cid-sYseAX4x5N button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3103,7 +3106,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #75addb;
 }
 .cid-sYseAX4x5N button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3563,7 +3566,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #75addb;
 }
 .cid-sYzkrQ9Uyj button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
