--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4707,3 +4707,13 @@ a {
 .cid-sZffzcyVQY .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-sZFF3RDqr1 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sZFF3RDqr1 blockquote {
+  border-color: #6592e6;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
