--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4717,3 +4717,16 @@ a {
   border-radius: 4px;
   background-color: #fafafa;
 }
+.cid-sZHrqEhGEq {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-sZHrqEhGEq .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sZHrqEhGEq .mbr-section-title,
+.cid-sZHrqEhGEq .mbr-section-subtitle,
+.cid-sZHrqEhGEq .mbr-text {
+  text-align: center;
+}
