--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4730,3 +4730,8 @@ a {
 .cid-sZHrqEhGEq .mbr-text {
   text-align: center;
 }
+.cid-sZHw0d1QPi {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
