--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -67,7 +67,9 @@ h6,
 .display-1,
 .display-2,
 .display-4,
-.display-5,
+.display-5{
+  text-align: left;
+}
 .display-7 {
   text-align: justify;
 }
