--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4735,3 +4735,16 @@ a {
   padding-bottom: 1rem;
   background-color: #ffffff;
 }
+.cid-sZZQSw4Rn5 {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-sZZQSw4Rn5 .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sZZQSw4Rn5 .mbr-section-title,
+.cid-sZZQSw4Rn5 .mbr-section-subtitle,
+.cid-sZZQSw4Rn5 .mbr-text {
+  text-align: center;
+}
