--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1043,7 +1043,7 @@ a {
   }
 }
 .cid-sYsm6ZTLsK {
-  background-image: url("../../../assets/images/intro-bg-2000x1125.jpg");
+  background-image: url("../../../img/site/intro-bg-2000x1125.webp");
 }
 .cid-sYsm6ZTLsK .social-row .soc-item {
   display: inline-block;
