--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1135,7 +1135,7 @@ a {
 .cid-sYxCedtxpF {
   padding-top: 4rem;
   padding-bottom: 4rem;
-  background-image: url("../../../assets/images/bg-1591x1061.jpg");
+  background-image: url("../../../img/site/bg-1591x1061.webp");
 }
 @media (min-width: 1500px) {
   .cid-sYxCedtxpF .container {
