--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4748,3 +4748,49 @@ a {
 .cid-sZZQSw4Rn5 .mbr-text {
   text-align: center;
 }
+.cid-t0WGFEERur {
+  padding-top: 0rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+.cid-t0WGFEERur .nav-tabs .nav-item.open .nav-link:focus,
+.cid-t0WGFEERur .nav-tabs .nav-link.active:focus {
+  outline: none;
+}
+.cid-t0WGFEERur .nav-tabs {
+  flex-wrap: wrap;
+  border-bottom: 1px solid #6592e6;
+}
+@media (max-width: 767px) {
+  .cid-t0WGFEERur .nav-item {
+    width: 100%;
+    margin: 0;
+  }
+}
+.cid-t0WGFEERur .nav-tabs .nav-link {
+  transition: all .5s;
+  border: none;
+  border-bottom: 3px solid transparent;
+  border-radius: 0 !important;
+}
+.cid-t0WGFEERur .nav-tabs .nav-link:not(.active) {
+  color: #000000;
+}
+.cid-t0WGFEERur .nav-tabs .nav-item {
+  margin-right: 1.5rem;
+}
+.cid-t0WGFEERur .nav-link,
+.cid-t0WGFEERur .nav-link.active {
+  padding: 1rem 0;
+  background-color: transparent;
+}
+.cid-t0WGFEERur .nav-tabs .nav-link.active {
+  color: #6592e6;
+  border-bottom: 3px solid #6592e6;
+}
+.cid-t0WGFEERur H4 {
+  text-align: center;
+}
+.cid-t0WGFEERur H3 {
+  text-align: center;
+}
