--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1324,7 +1324,7 @@ a {
 .cid-sYzbPCvQ7r {
   padding-top: 6rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/intro-bg-2000x1125.jpg");
+  background-image: url("../../../img/site/intro-bg-2000x1125.webp");
 }
 .cid-sYzbPCvQ7r .mbr-text,
 .cid-sYzbPCvQ7r .mbr-section-btn {
