--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -34,7 +34,7 @@ body {
   font-size: 1.875rem;
 }
 .display-7 {
-  font-family: 'Lora', serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   line-height: 1.5;
 }
