--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4785,7 +4785,7 @@ a {
   background-color: transparent;
 }
 .cid-t0WGFEERur .nav-tabs .nav-link.active {
-  color: #6592e6;
+  color: #75addb;
   border-bottom: 3px solid #6592e6;
 }
 .cid-t0WGFEERur H4 {
