--- a/assets/internals/css/cardgrid.css
+++ b/assets/internals/css/cardgrid.css
@@ -13,8 +13,8 @@ html {
 }
 
 body {
-  color: #272727;
-  font-family: 'Quicksand', serif;
+  color: #232323;
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   letter-spacing: 0;
@@ -92,7 +92,7 @@ img {
 
 .card_content {
   padding: 1rem;
-  background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%);
+  background: linear-gradient(to bottom left, #EF8D9C 40%, #75addb 100%);
 }
 
 .card_title {
