--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4851,6 +4851,7 @@ a {
 }
 .cid-t16lhyK4qd .item-subtitle {
   text-align: left;
+}  
   .cid-t1AvF6Newe {
     padding-top: 2rem;
     padding-bottom: 1rem;
