--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,13 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
+.unselectable {
+        -webkit-user-select: none;
+        -webkit-touch-callout: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+}
 .display-1 {
   font-family: 'Poppins', sans-serif;
   font-size: 5rem;
@@ -4851,7 +4858,7 @@ a {
 }
 .cid-t16lhyK4qd .item-subtitle {
   text-align: left;
-}  
+}
   .cid-t1AvF6Newe {
     padding-top: 2rem;
     padding-bottom: 1rem;
