--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4875,3 +4875,87 @@ a {
   .cid-t1AvF6Newe img {
     width: 100%;
   }
+  .cid-t1EZGBaNgR {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+    background-color: #ffffff;
+  }
+  .cid-t1EZGBaNgR img,
+  .cid-t1EZGBaNgR .item-img {
+    width: 100%;
+  }
+  .cid-t1EZGBaNgR .item:focus,
+  .cid-t1EZGBaNgR span:focus {
+    outline: none;
+  }
+  .cid-t1EZGBaNgR .item {
+    cursor: pointer;
+    margin-bottom: 2rem;
+  }
+  .cid-t1EZGBaNgR .item-wrapper {
+    position: relative;
+    border-radius: 4px;
+    background: #fafafa;
+    height: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+  @media (min-width: 992px) {
+    .cid-t1EZGBaNgR .item-wrapper .item-content {
+      padding: 2rem 2rem 0;
+    }
+    .cid-t1EZGBaNgR .item-wrapper .item-footer {
+      padding: 0 2rem 2rem;
+    }
+  }
+  @media (max-width: 991px) {
+    .cid-t1EZGBaNgR .item-wrapper .item-content {
+      padding: 1rem 1rem 0;
+    }
+    .cid-t1EZGBaNgR .item-wrapper .item-footer {
+      padding: 0 1rem 1rem;
+    }
+  }
+  .cid-t1EZGBaNgR .mbr-section-btn {
+    margin-top: auto !important;
+  }
+  .cid-t1EZGBaNgR .mbr-section-title {
+    color: #232323;
+  }
+  .cid-t1EZGBaNgR .mbr-text,
+  .cid-t1EZGBaNgR .mbr-section-btn {
+    text-align: left;
+  }
+  .cid-t1EZGBaNgR .item-title {
+    text-align: left;
+  }
+  .cid-t1EZGBaNgR .item-subtitle {
+    text-align: left;
+  }
+  .cid-t1GksNdDkS {
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+    background-color: #151515;
+  }
+  .cid-t1GksNdDkS .mbr-overlay {
+    background-color: #ffffff;
+    opacity: 0.4;
+  }
+  .cid-t1GksNdDkS form .mbr-section-btn {
+    text-align: center;
+    width: 100%;
+  }
+  .cid-t1GksNdDkS form .mbr-section-btn .btn {
+    display: inline-flex;
+  }
+  @media (max-width: 991px) {
+    .cid-t1GksNdDkS form .mbr-section-btn .btn {
+      width: 100%;
+    }
+  }
+  .cid-t1GksNdDkS .mbr-section-title {
+    color: #75addb;
+  }
+  .cid-t1GksNdDkS .mbr-section-subtitle {
+    color: #ffffff;
+  }
