--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4924,7 +4924,7 @@ a {
   }
   .cid-t1EZGBaNgR .mbr-text,
   .cid-t1EZGBaNgR .mbr-section-btn {
-    text-align: left;
+    text-align: justify;
   }
   .cid-t1EZGBaNgR .item-title {
     text-align: left;
