--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4913,7 +4913,7 @@ a {
     margin-top: auto !important;
   }
   .cid-t1EZGBaNgR .mbr-section-title {
-    color: #232323;
+    color: #75addb;
   }
   .cid-t1EZGBaNgR .mbr-text,
   .cid-t1EZGBaNgR .mbr-section-btn {
