--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4979,3 +4979,39 @@ a {
   .cid-t7qXsS13I8 .mbr-section-subtitle {
     color: #ffffff;
   }
+  .cid-t7rcMXfWbi {
+    padding-top: 4rem;
+    padding-bottom: 5rem;
+    background-color: #151515;
+  }
+  .cid-t7rcMXfWbi .image-wrapper {
+    display: flex;
+    align-items: center;
+  }
+  .cid-t7rcMXfWbi .card-wrapper {
+    margin-bottom: 2rem;
+    display: flex;
+    border-radius: 4px;
+    background: #fafafa;
+  }
+  @media (max-width: 991px) {
+    .cid-t7rcMXfWbi .card-wrapper {
+      padding: 1rem 2rem;
+    }
+  }
+  @media (min-width: 992px) {
+    .cid-t7rcMXfWbi .card-wrapper {
+      padding: 2rem 4rem;
+    }
+  }
+  .cid-t7rcMXfWbi .mbr-iconfont {
+    font-size: 4rem;
+    padding-right: 1.5rem;
+    color: #75addb;
+  }
+  .cid-t7rcMXfWbi .mbr-section-title {
+    color: #75addb;
+  }
+  .cid-t7rcMXfWbi P {
+    color: #75addb;
+  }
