--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5016,7 +5016,7 @@ a {
     color: #75addb;
   }
 
-  .table {
+  table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
