--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5022,7 +5022,7 @@ a {
     width: 100%;
   }
 
-  .td, th {
+  .td, .th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
