--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5015,3 +5015,25 @@ a {
   .cid-t7rcMXfWbi P {
     color: #75addb;
   }
+
+  .cid-tjiN3eekXe {
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    background-color: #ffffff;
+  }
+  @media (max-width: 991px) {
+    .cid-tjiN3eekXe .image-wrapper {
+      margin-bottom: 1rem;
+    }
+  }
+  .cid-tjiN3eekXe .row {
+    flex-direction: row-reverse;
+  }
+  .cid-tjiN3eekXe img {
+    width: 100%;
+  }
+  @media (min-width: 992px) {
+    .cid-tjiN3eekXe .text-wrapper {
+      padding: 2rem;
+    }
+  }
