--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5017,9 +5017,12 @@ a {
   }
 
   .cid-tjiN3eekXe {
-    padding-top: 2rem;
+    padding-top: 0rem;
     padding-bottom: 1rem;
     background-color: #ffffff;
+  }
+  .cid-tjiN3eekXe .text-wrapper {
+    padding: 1rem;
   }
   @media (max-width: 991px) {
     .cid-tjiN3eekXe .image-wrapper {
