--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5596,3 +5596,65 @@ a {
   .cid-tz4qRZ0YJ3 .social-row .soc-item:hover .mbr-iconfont {
     color: #ffffff;
   }
+  .cid-tz5ehtSdxc {
+    background-color: #bed3f9;
+  }
+  .cid-tz5ehtSdxc .icon-wrapper {
+    margin: auto;
+    background-color: #6592e6;
+    color: #fafafa;
+    border-radius: 50%;
+    font-size: 48px;
+    cursor: pointer;
+    width: 6rem;
+    height: 6rem;
+    transition: all 0.25s;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .cid-tz5ehtSdxc .icon-wrapper span {
+    margin-left: 10px;
+  }
+  .cid-tz5ehtSdxc .modalWindow {
+    position: fixed;
+    z-index: 5000;
+    left: 0;
+    top: 0;
+    background-color: rgba(61, 61, 61, 0.65);
+    width: 100%;
+    height: 100%;
+  }
+  .cid-tz5ehtSdxc .modalWindow .modalWindow-container {
+    display: table-cell;
+    vertical-align: middle;
+  }
+  .cid-tz5ehtSdxc .modalWindow .modalWindow-video {
+    height: calc(44.9943757vw);
+    width: 80vw;
+    margin: 0 auto;
+  }
+  .cid-tz5ehtSdxc .close {
+    position: fixed;
+    opacity: 0.5;
+    font-size: 22px;
+    font-weight: 300;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    color: #fff;
+    top: 2.5rem;
+    right: 2.5rem;
+    border: 2px solid #fff;
+    text-shadow: none;
+    z-index: 5;
+    transition: opacity 0.3s ease;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+  .cid-tz5ehtSdxc .close:hover {
+    opacity: 1;
+    background: #000;
+    color: #fff;
+  }
