--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5043,7 +5043,6 @@ a {
   .cid-tz4yHC152R {
     padding-top: 4rem;
     padding-bottom: 2rem;
-    background-color: #ffffff;
   }
   .cid-tz4yHC152R .item {
     display: flex;
@@ -5076,6 +5075,16 @@ a {
   .cid-tz4yHC152R .mbr-text,
   .cid-tz4yHC152R .mbr-section-btn {
     text-align: left;
+  }
+  .cid-tz4yHC152R .icon-title {
+    color: #ffffff;
+  }
+  .cid-tz4yHC152R .icon-text {
+    color: #ffffff;
+  }
+  .cid-tz4yHC152R .card-title,
+  .cid-tz4yHC152R .card-box {
+    color: #ffffff;
   }
   .cid-tz4q9na41x {
     padding-top: 0;
