--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5786,3 +5786,9 @@ a {
       margin-bottom: 2rem;
     }
   }
+  .cid-tX6pWBCRXL {
+    background-image: url("../img/automotive_immersive_sound/targets.webp");
+  }
+  .cid-tX6pWBCRXL .mbr-section-title {
+    color: #ffffff;
+  }
