--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5787,7 +5787,7 @@ a {
     }
   }
   .cid-tX6pWBCRXL {
-    background-image: url("../img/automotive_immersive_sound/targets.webp");
+    background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/targets.webp");
   }
   .cid-tX6pWBCRXL .mbr-section-title {
     color: #ffffff;
