--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5792,6 +5792,12 @@ a {
   .cid-tX6pWBCRXL .mbr-section-title {
     color: #ffffff;
   }
+  .cid-tX6pWBCRXL1 {
+    background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/bg_nebula2.webp");
+  }
+  .cid-tX6pWBCRXL1 .mbr-section-title {
+    color: #ffffff;
+  }
   .cid-tX6D4uUNCX {
     padding-top: 5rem;
     padding-bottom: 5rem;
