--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5791,13 +5791,6 @@ a {
   }
   .cid-tX6pWBCRXL .mbr-section-title {
     color: #ffffff;
-  }
-  .cid-tX6pWBCRXL1 {
-    background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/bg_nebula2.webp");
-  }
-  .cid-tX6pWBCRXL1 .mbr-section-title {
-    color: #ffffff;
-  }
   .cid-tX6D4uUNCX {
     padding-top: 5rem;
     padding-bottom: 5rem;
@@ -5810,6 +5803,28 @@ a {
     margin-bottom: 2rem;
   }
   .cid-tX6D4uUNCX .card-wrapper {
+    min-height: 220px;
+    transition: all 0.3s;
+    border-radius: 4px;
+    padding: 1rem;
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+  }
+  .cid-tX6D4uUNCX1 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/bg_nebula2.webp");
+  }
+  .cid-tX6D4uUNCX1 .mbr-iconfont {
+    display: block;
+    font-size: 4rem;
+    color: #6592e6;
+    margin-bottom: 2rem;
+  }
+  .cid-tX6D4uUNCX1 .card-wrapper {
     min-height: 220px;
     transition: all 0.3s;
     border-radius: 4px;
