--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5796,6 +5796,16 @@ a {
     padding-bottom: 5rem;
     background-color: #0e1c2b;
   }
+  .cid-tX6pWBCRXL1 {
+    background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/layers.webp");
+  }
+  .cid-tX6pWBCRXL1 .mbr-section-title {
+    color: #ffffff;
+  .cid-tX6D4uUNCX {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    background-color: #0e1c2b;
+  }
   .cid-tX6D4uUNCX .mbr-iconfont {
     display: block;
     font-size: 4rem;
