--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7074,7 +7074,7 @@ a {
   transition: all 0.3s;
   border-radius: 4px;
   padding: 1rem;
-  background: #0e1c2b;
+  background: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7084,6 +7084,7 @@ a {
 .cid-tX6D4uUNCX1 {
   padding-top: 5rem;
   padding-bottom: 5rem;
+  background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/bg_nebula2.webp");
 }
 
 .cid-tX6D4uUNCX1 .mbr-iconfont {
@@ -7098,7 +7099,7 @@ a {
   transition: all 0.3s;
   border-radius: 4px;
   padding: 1rem;
-  background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/bg_nebula2.webp");
+  background: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
