--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7090,7 +7090,7 @@ a {
 .cid-tX6D4uUNCX1 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/bg_nebula2.webp");
+  background-image: url("https://www.gabrielavelitch.com/img/site/bg_nebula2.webp");
 }
 
 .cid-tX6D4uUNCX1 .mbr-iconfont {
