--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7039,21 +7039,21 @@ a {
 }
 
 .cid-tX6pWBCRXL .mbr-section-title {
-  color: #ffffff;
+  color: #0e1c2b;
 }
 .cid-tX6pWBCRXL1 {
   background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/layers.webp");
 }
 
 .cid-tX6pWBCRXL1 .mbr-section-title {
-  color: #ffffff;
+  color: #0e1c2b;
 }
 .cid-tX6pWBCRXL2 {
   background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/ambisonic.webp");
 }
 
 .cid-tX6pWBCRXL2 .mbr-section-title {
-  color: #ffffff;
+  color: #0e1c2b;
 }
 
 .cid-tX6D4uUNCX {
