--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7043,6 +7043,7 @@ a {
 }
 .cid-tX6pWBCRXL1 {
   background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/layers.webp");
+  background-color: #ffffff;
 }
 
 .cid-tX6pWBCRXL1 .mbr-section-title {
