--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7056,6 +7056,13 @@ a {
 .cid-tX6pWBCRXL2 .mbr-section-title {
   color: #0e1c2b;
 }
+.cid-tX6pWBCRXL3 {
+  background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/setup.webp");
+}
+
+.cid-tX6pWBCRXL3 .mbr-section-title {
+  color: #fde5b1;
+}
 
 .cid-tX6D4uUNCX {
   padding-top: 5rem;
