--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7058,6 +7058,7 @@ a {
 }
 .cid-tX6pWBCRXL3 {
   background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/setup.webp");
+  background-color: #fde5b1;
 }
 
 .cid-tX6pWBCRXL3 .mbr-section-title {
