--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7064,6 +7064,13 @@ a {
 .cid-tX6pWBCRXL3 .mbr-section-title {
   color: #fde5b1;
 }
+.cid-tX6pWBCRXL4 {
+  background-color: #fde5b1;
+}
+
+.cid-tX6pWBCRXL4 .mbr-section-title {
+  color: #fde5b1;
+}
 
 .cid-tX6D4uUNCX {
   padding-top: 5rem;
