--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7067,7 +7067,14 @@ a {
 .cid-tX6pWBCRXL4 {
   background-color: #fde5b1;
 }
+.cid-tX6pWBCRXL5 {
+  background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/idea.webp");
+  background-color: #fde5b1;
+}
 
+.cid-tX6pWBCRXL5 .mbr-section-title {
+  color: #fde5b1;
+}
 .cid-tX6pWBCRXL4 .mbr-section-title {
   color: #fde5b1;
 }
