--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7067,6 +7067,9 @@ a {
 .cid-tX6pWBCRXL4 {
   background-color: #fde5b1;
 }
+.cid-tX6pWBCRXL4 .mbr-section-title {
+  color: #fde5b1;
+}
 .cid-tX6pWBCRXL5 {
   background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/idea.webp");
   background-color: #fde5b1;
@@ -7075,10 +7078,14 @@ a {
 .cid-tX6pWBCRXL5 .mbr-section-title {
   color: #fde5b1;
 }
-.cid-tX6pWBCRXL4 .mbr-section-title {
-  color: #fde5b1;
+.cid-tX6pWBCRXL5 {
+  background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/tuning.webp");
+  background-color: #ef786f;
 }
 
+.cid-tX6pWBCRXL5 .mbr-section-title {
+  color: #ef786f;
+}
 .cid-tX6D4uUNCX {
   padding-top: 5rem;
   padding-bottom: 5rem;
