--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7086,6 +7086,14 @@ a {
 .cid-tX6pWBCRXL6 .mbr-section-title {
   color: #ef786f;
 }
+.cid-tX6pWBCRXL7 {
+  background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/tuning_op.webp");
+  background-color: #ef786f;
+}
+
+.cid-tX6pWBCRXL7 .mbr-section-title {
+  color: #ef786f;
+}
 .cid-tX6D4uUNCX {
   padding-top: 5rem;
   padding-bottom: 5rem;
