--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7051,6 +7051,7 @@ a {
 }
 .cid-tX6pWBCRXL2 {
   background-image: url("https://www.gabrielavelitch.com/img/automotive_immersive_sound/ambisonic.webp");
+    background-color: #0e1c2b;
 }
 
 .cid-tX6pWBCRXL2 .mbr-section-title {
